8/18/11 added VIOLET and INDIGO to VisibleColor
8/16/11 Fixed implementation of SettableNot and added improved tests, see #3045
8/12/11 added Arrow.getHeadScale, see #3039
8/3/11 Removed NotImplementedException and implemented ObservableList.retainAll, see #3033
8/2/11 Renamed ListenerList -> ObserverList, bug fixes in ObservableList
8/2/11 Fixed: notifyImmediately flag ignored in ObservableList
8/2/11 Moved ObservableList to phet common
8/2/11 Generified ModuleManager.modules from ArrayList to ArrayList<Module> and removed unnecessary casts
7/20/11 Renamed static creation method Property.value to Property.property
7/19/11 Added a convenience static factory method to Property
7/8/11 #3000, fix seam in IntensitySlider
6/25/11 Automatically update the ConstantDTClock in SimSpeedControl instead of duplicating listener code in many places, see #2798
6/23/11 Added MathUtil.clamp(int,int,int)
6/9/11 #2936, added MathUtil.clamp(double,DoubleRange)
6/7/11 Moved Dimension2DDouble to be a top-level class, see #123
6/7/11 Added docs to ModelViewTransform, see #123
5/23/11 Added getMax() functions to ImmutableRectangle2D
5/23/11 Removed AdvancedPanel constructor that used untranslated strings
5/20/11 Added ModelViewTransform.modelToView(ImmutableRectangle2D)
5/18/11 Changed ObservableProperty.trace() to use System.out instead of java.util.logging, resolves #2882
5/17/11 Made RichSimpleObserver observe ObservableProperty instances instead of Property instances
5/17/11 Added LessThan and extended CompositeBooleanProperty for GreaterThan, LessThan and GreaterThanOrEqualTo
5/17/11 Added GreaterThanOrEqualTo and added varargs for plus method
5/17/11 Added CompositeDoubleProperty and reimplemented classes such as Plus, Times, Max, Min, Times using it to provide composition methods on the result
5/16/11 Removed unused methods from MathUtil
5/13/11 ImmutableRectangle2D: made final fields public and added a toRectangle2D method